<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ali.biblioteca.activities.RegisterActivity"
    android:background="@drawable/bg">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/llContent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogoUTCN"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:src="@drawable/logo_site"
            android:contentDescription="@string/logo_utcn"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/text_app_title"
            android:textAlignment="center"
            android:textSize="30sp"
            />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        app:layout_goneMarginLeft="64dp"
        android:layout_marginEnd="64dp"
        app:layout_goneMarginRight="64dp"
        app:layout_constraintTop_toBottomOf="@+id/llHeader"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="64dp"
        app:layout_constraintRight_toRightOf="parent">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorHint"
            android:background="@drawable/rounded_edittext"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:drawableLeft="@drawable/ic_action_name"
            android:drawableStart="@drawable/ic_action_name"
            android:drawablePadding="8dp"
            android:layout_marginBottom="4dp"
            />

        <EditText
            android:id="@+id/etCNP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="CNP"
            android:inputType="text"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorHint"
            android:background="@drawable/rounded_edittext"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:drawableLeft="@drawable/ic_action_name"
            android:drawableStart="@drawable/ic_action_name"
            android:drawablePadding="8dp"
            android:layout_marginBottom="4dp"
            />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorHint"
            android:background="@drawable/rounded_edittext"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:drawableLeft="@drawable/ic_action_email"
            android:drawableStart="@drawable/ic_action_email"
            android:drawablePadding="8dp"
            android:layout_marginBottom="4dp"
            />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_pass"
            android:inputType="textPassword"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorHint"
            android:background="@drawable/rounded_edittext"
            android:textSize="18sp"
            android:fontFamily="sans-serif"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:drawableLeft="@drawable/ic_action_pass"
            android:drawableStart="@drawable/ic_action_pass"
            android:drawablePadding="8dp"
            android:layout_marginBottom="4dp"
            />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginEnd="45dp"
            android:textSize="18sp"
            android:text="@string/text_btn_register"
            android:textColor="@color/colorHint"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"/>

        <!--<Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:layout_marginLeft="80dp"
            android:layout_marginStart="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginEnd="80dp"
            android:textSize="18sp"
            android:text="@string/text_btn_register"
            android:textColor="@color/colorHint"
            android:textAllCaps="false"/>-->

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_login"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:textAlignment="center"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
