<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/bg_home">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorRedTransparent">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="Name"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:textSize="22sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/tvRole"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvName"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="Role: Admin"
            android:textColor="@color/colorWhite"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvRole"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="Email: email@gmail.com"
            android:textColor="@color/colorWhite"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/tvCNP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvEmail"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="CNP: 1920517312341"
            android:textColor="@color/colorWhite"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"/>

    </RelativeLayout>

    <ScrollView
        android:id="@+id/swChangeInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlHeader"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginEnd="64dp"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="@drawable/rounded_edittext"
                android:drawableLeft="@drawable/ic_action_pass"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_action_pass"
                android:fontFamily="sans-serif"
                android:hint="@string/hint_pass"
                android:inputType="textPassword"
                android:paddingBottom="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorHint"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginStart="45dp"
                android:background="@drawable/rounded_button"
                android:text="@string/text_btn_password"
                android:textAllCaps="false"
                android:textColor="@color/colorHint"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="@drawable/rounded_edittext"
                android:drawableLeft="@drawable/ic_action_email"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_action_email"
                android:fontFamily="sans-serif"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:paddingBottom="8dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="8dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorHint"
                android:textSize="18sp"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/btnEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:layout_marginStart="45dp"
                android:background="@drawable/rounded_button"
                android:text="@string/text_btn_email"
                android:textAllCaps="false"
                android:textColor="@color/colorHint"
                android:textSize="18sp" />




        </LinearLayout>


    </ScrollView>


</RelativeLayout>